--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
-@import 'tailwindcss';
-/* @tailwind base;
+/* @import 'tailwindcss'; */
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
@@ -111,37 +111,35 @@
   }
 
   .dark {
-    --background: 220 40% 10%;
-    --foreground: 210 20% 98%;
-    --muted: 215 27.9% 16.9%;
-    --muted-foreground: 217.9 10.6% 64.9%;
-    --popover: 224 71.4% 4.1%;
-    --popover-foreground: 210 20% 98%;
-    --card: 224 71.4% 4.1%;
-    --card-foreground: 210 20% 98%;
-    --border: 215 27.9% 16.9%;
-    --input: 215 27.9% 16.9%;
+    --background: 255 0% 20%;
+    --foreground: 255 10% 98%;
+    --muted: 255 0% 30%;
+    --muted-foreground: 255 10% 98%;
+    --popover: 255 0% 5%;
+    --popover-foreground: 255 10% 98%;
+    --card: 255 0% 10%;
+    --card-foreground: 255 10% 98%;
+    --border: 255 0% 30%;
+    --input: 255 0% 30%;
     --primary: 200 95% 50%;
     --primary-foreground: 0 0% 100%;
     --secondary: 182 80% 40%;
     --secondary-foreground: 210 20% 98%;
     --accent: 250 95% 60%;
-    --accent-foreground: 210 20% 98%;
+    --accent-foreground: 255 10% 98%;
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 20% 98%;
+    --destructive-foreground: 255 10% 98%;
     --ring: 216 12.2% 83.9%;
-    --sidebar-background: 240 5.9% 10%;
-    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-background: 255 0% 1%;
+    --sidebar-foreground: 255 10% 98%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
-    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-accent: 255 0% 15.9%;
+    --sidebar-accent-foreground: 255 10% 98%;
+    --sidebar-border: 255 0% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
-
-
 
 @layer utilities {
 
